@@ -17,6 +17,7 @@ package ifneeded Emoticons 1.0 [list source [file join $dir Emoticons.tcl]]
 package ifneeded Filter 1.0 [list source [file join $dir Filter.tcl]]
 package ifneeded GotMsg 1.0 [list source [file join $dir GotMsg.tcl]]
 package ifneeded GroupChat 1.0 [list source [file join $dir GroupChat.tcl]]
+package ifneeded History 1.0 [list source [file join $dir History.tcl]]
 package ifneeded Jabber 1.0 [list source [file join $dir Jabber.tcl]]
 package ifneeded JForms 1.0 [list source [file join $dir JForms.tcl]]
 package ifneeded JPrefs 1.0 [list source [file join $dir JPrefs.tcl]]
